@@ -1,4 +1,6 @@
 2006-01-13  Don Allingham  <don@gramps-project.org>
+	* src/const.py.in: remove unused variables
+	* src/gramps.glade: remove unused dialogs
 	* src/DisplayTabs.py: Move event list  
 	* src/EditFamily.py: add editing of people, add relationship type
 	* src/EventEdit.py: move event list
